hphp/hack/test/typecheck/array/safe_vector_array/disallow_darray_with_wrong_key_type_where_darray_or_varray_is_required.php
<?hh

function test(): darray_or_varray<int> {
  return darray[true => 0];
}
